public/gdc-gql.js
window.gql = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = function(filters) {
            return filters ? {filters: filters} : {};
          },
        peg$c1 = function() { return {}; },
        peg$c2 = function(filters) { return filters; },
        peg$c3 = function(left, operator, right) {
            return {
              op: operator,
              content: [left, right]
            };
          },
        peg$c4 = function(field, operator, term) {
            return term_response(operator,field,term);
          },
        peg$c5 = function(field, operator, terms) {
            return term_response(operator,field,terms);
          },
        peg$c6 = "B",
        peg$c7 = { type: "literal", value: "B", description: "\"B\"" },
        peg$c8 = "KB",
        peg$c9 = { type: "literal", value: "KB", description: "\"KB\"" },
        peg$c10 = "MB",
        peg$c11 = { type: "literal", value: "MB", description: "\"MB\"" },
        peg$c12 = "GB",
        peg$c13 = { type: "literal", value: "GB", description: "\"GB\"" },
        peg$c14 = "TB",
        peg$c15 = { type: "literal", value: "TB", description: "\"TB\"" },
        peg$c16 = "PB",
        peg$c17 = { type: "literal", value: "PB", description: "\"PB\"" },
        peg$c18 = "b",
        peg$c19 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c20 = "kb",
        peg$c21 = { type: "literal", value: "kb", description: "\"kb\"" },
        peg$c22 = "mb",
        peg$c23 = { type: "literal", value: "mb", description: "\"mb\"" },
        peg$c24 = "gb",
        peg$c25 = { type: "literal", value: "gb", description: "\"gb\"" },
        peg$c26 = "tb",
        peg$c27 = { type: "literal", value: "tb", description: "\"tb\"" },
        peg$c28 = "pb",
        peg$c29 = { type: "literal", value: "pb", description: "\"pb\"" },
        peg$c30 = function(number, unit) { return toBytes(number, unit); },
        peg$c31 = function(x, xs) { return [x].concat(xs); },
        peg$c32 = function(f) { return f; },
        peg$c33 = { type: "other", description: "field" },
        peg$c34 = function(t) { return t; },
        peg$c35 = { type: "other", description: "term" },
        peg$c36 = function(op) { return op; },
        peg$c37 = ".",
        peg$c38 = { type: "literal", value: ".", description: "\".\"" },
        peg$c39 = /^[0-9]/,
        peg$c40 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c41 = function(digits) { return '.' + digits.join(''); },
        peg$c42 = function(digits, frac) { return parseFloat(digits.join('') + frac); },
        peg$c43 = { type: "other", description: "number" },
        peg$c44 = function(x) { return parseInt(x[0] + x[1].join(''), 10) },
        peg$c45 = "-",
        peg$c46 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c47 = { type: "other", description: "," },
        peg$c48 = ",",
        peg$c49 = { type: "literal", value: ",", description: "\",\"" },
        peg$c50 = { type: "other", description: ":" },
        peg$c51 = ":",
        peg$c52 = { type: "literal", value: ":", description: "\":\"" },
        peg$c53 = { type: "other", description: "=" },
        peg$c54 = "=",
        peg$c55 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c56 = { type: "other", description: "!=" },
        peg$c57 = "!=",
        peg$c58 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c59 = { type: "other", description: ">" },
        peg$c60 = ">",
        peg$c61 = { type: "literal", value: ">", description: "\">\"" },
        peg$c62 = { type: "other", description: ">=" },
        peg$c63 = ">=",
        peg$c64 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c65 = { type: "other", description: "<" },
        peg$c66 = "<",
        peg$c67 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c68 = { type: "other", description: "<=" },
        peg$c69 = "<=",
        peg$c70 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c71 = { type: "other", description: "(" },
        peg$c72 = "(",
        peg$c73 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c74 = { type: "other", description: ")" },
        peg$c75 = ")",
        peg$c76 = { type: "literal", value: ")", description: "\")\"" },
        peg$c77 = { type: "other", description: "{" },
        peg$c78 = "{",
        peg$c79 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c80 = { type: "other", description: "}" },
        peg$c81 = "}",
        peg$c82 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c83 = { type: "other", description: "[" },
        peg$c84 = "[",
        peg$c85 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c86 = { type: "other", description: "]" },
        peg$c87 = "]",
        peg$c88 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c89 = "\"",
        peg$c90 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c91 = { type: "other", description: "AND" },
        peg$c92 = "and",
        peg$c93 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c94 = { type: "other", description: "OR" },
        peg$c95 = "or",
        peg$c96 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c97 = { type: "other", description: "IN" },
        peg$c98 = "in",
        peg$c99 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c100 = { type: "other", description: "EXCLUDE" },
        peg$c101 = "exclude",
        peg$c102 = { type: "literal", value: "exclude", description: "\"exclude\"" },
        peg$c103 = { type: "other", description: "ISNT" },
        peg$c104 = "not",
        peg$c105 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c106 = { type: "other", description: "IS" },
        peg$c107 = "is",
        peg$c108 = { type: "literal", value: "is", description: "\"is\"" },
        peg$c109 = { type: "other", description: "NOT" },
        peg$c110 = { type: "other", description: "MISSING" },
        peg$c111 = "missing",
        peg$c112 = { type: "literal", value: "missing", description: "\"missing\"" },
        peg$c113 = /^[A-Za-z0-9\-_.]/,
        peg$c114 = { type: "class", value: "[A-Za-z0-9\\-\\_\\.]", description: "[A-Za-z0-9\\-\\_\\.]" },
        peg$c115 = function(x) {
            return x[1];
          },
        peg$c116 = /^[^"]/,
        peg$c117 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c118 = function(s) { return s; },
        peg$c119 = function(x) {
            return x.join('');
          },
        peg$c120 = { type: "other", description: "newline" },
        peg$c121 = "\r\n",
        peg$c122 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c123 = "\r",
        peg$c124 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c125 = "\n",
        peg$c126 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c127 = "\u2028",
        peg$c128 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c129 = "\u2029",
        peg$c130 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c131 = { type: "other", description: "whitespace" },
        peg$c132 = " ",
        peg$c133 = { type: "literal", value: " ", description: "\" \"" },
        peg$c134 = "\t",
        peg$c135 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c136 = "\x0B",
        peg$c137 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c138 = "\f",
        peg$c139 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c140 = { type: "other", description: "end of input" },
        peg$c141 = { type: "any", description: "any character" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseStart() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseFiltersExpr();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parse_();
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parse_();
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseEOF();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1();
          }
          s0 = s1;
        }
      }

      return s0;
    }

    function peg$parseFiltersExpr() {
      var s0;

      s0 = peg$parseGroupExpr();
      if (s0 === peg$FAILED) {
        s0 = peg$parseExpr();
      }

      return s0;
    }

    function peg$parseParenExpr() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseLPAR();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parse_();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parse_();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseFiltersExpr();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parse_();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseRPAR();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c2(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseExpr() {
      var s0;

      s0 = peg$parseEqualityExpr();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCompareExpr();
        if (s0 === peg$FAILED) {
          s0 = peg$parseMissingExpr();
          if (s0 === peg$FAILED) {
            s0 = peg$parseListExpr();
            if (s0 === peg$FAILED) {
              s0 = peg$parseParenExpr();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseGroupExpr() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseExpr();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseGroupOp();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseFiltersExpr();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c3(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseEqualityExpr() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseField();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseEqualityOp();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseTerm();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseMissingExpr() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseField();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseMissingOp();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMISSING();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseCompareExpr() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseField();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseCompareOp();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseComparable();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseListExpr() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseField();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseListOp();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLBRACK();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parse_();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseTerms();
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$parse_();
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parse_();
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseRBRACK();
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c5(s1, s2, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSizeUnit() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 66) {
        s0 = peg$c6;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c8) {
          s0 = peg$c8;
          peg$currPos += 2;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c10) {
            s0 = peg$c10;
            peg$currPos += 2;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
          if (s0 === peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c12) {
              s0 = peg$c12;
              peg$currPos += 2;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c13); }
            }
            if (s0 === peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c14) {
                s0 = peg$c14;
                peg$currPos += 2;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c15); }
              }
              if (s0 === peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c16) {
                  s0 = peg$c16;
                  peg$currPos += 2;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c17); }
                }
                if (s0 === peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 98) {
                    s0 = peg$c18;
                    peg$currPos++;
                  } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c19); }
                  }
                  if (s0 === peg$FAILED) {
                    if (input.substr(peg$currPos, 2) === peg$c20) {
                      s0 = peg$c20;
                      peg$currPos += 2;
                    } else {
                      s0 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c21); }
                    }
                    if (s0 === peg$FAILED) {
                      if (input.substr(peg$currPos, 2) === peg$c22) {
                        s0 = peg$c22;
                        peg$currPos += 2;
                      } else {
                        s0 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c23); }
                      }
                      if (s0 === peg$FAILED) {
                        if (input.substr(peg$currPos, 2) === peg$c24) {
                          s0 = peg$c24;
                          peg$currPos += 2;
                        } else {
                          s0 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c25); }
                        }
                        if (s0 === peg$FAILED) {
                          if (input.substr(peg$currPos, 2) === peg$c26) {
                            s0 = peg$c26;
                            peg$currPos += 2;
                          } else {
                            s0 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c27); }
                          }
                          if (s0 === peg$FAILED) {
                            if (input.substr(peg$currPos, 2) === peg$c28) {
                              s0 = peg$c28;
                              peg$currPos += 2;
                            } else {
                              s0 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c29); }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseSizeExpr() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsePOSITIVE_FLOAT();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSizeUnit();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c30(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseComparable() {
      var s0;

      s0 = peg$parseDATE();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSizeExpr();
        if (s0 === peg$FAILED) {
          s0 = peg$parseINTEGER();
        }
      }

      return s0;
    }

    function peg$parseFields() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseField();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseFieldsRest();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseFieldsRest();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c31(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFieldsRest() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseCOMMA();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseField();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c32(s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseField() {
      var s0, s1;

      peg$silentFails++;
      s0 = peg$parseUNQUOTED_STRING();
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c33); }
      }

      return s0;
    }

    function peg$parseTerms() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseTerm();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseTermsRest();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseTermsRest();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c31(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTermsRest() {
      var s0, s1, s2, s3, s4;
